web background chosen

--- a/protecc_frontend/protecc.css
+++ b/protecc_frontend/protecc.css
@@ -1,7 +1,11 @@
 /*CSS for the body*/
 body {
-    background-color: white;
-  }
+  background: url(web_background.jpg) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;; /*need image that gives sense of protection/calm*/
+}
   
   /*Product Name*/
   h1 {
