alignment of button and fonts

--- a/protecc_frontend/protecc.css
+++ b/protecc_frontend/protecc.css
@@ -10,6 +10,13 @@ body {
   /*Product Name*/
   h1 {
     text-align:center;
+    font-family: Helvetica;
+    /*shadow effects*/
+    color: #2757da;
+    text-shadow: 
+    0 0 5px #A5F1FF, 0 0 10px #A5F1FF,
+    0 0 20px #A5F1FF, 0 0 30px #A5F1FF,
+    0 0 40px #A5F1FF;
   }
   
   /*Start button*/
