adjusted detection settings

--- a/protecc_frontend/protecc.css
+++ b/protecc_frontend/protecc.css
@@ -31,7 +31,8 @@ body {
     cursor:pointer;
   }
 
-  /*Settings*/
+ 
+  /*Settings
   .dropbtn {
     background-color: #046daa;
     color: white;
@@ -64,3 +65,5 @@ body {
   .dropdown-content a:hover {background-color: #ddd;}
   .dropdown:hover .dropdown-content {display: block;}
   .dropdown:hover .dropbtn {background-color: #3e678e;}
+  */
+  
