--- a/protecc_frontend/protecc.css
+++ b/protecc_frontend/protecc.css
@@ -1,10 +1,11 @@
 /*CSS for the body*/
 body {
-  background: url(web_background.jpg) no-repeat center center fixed; 
+  background: url(blue.jpg) no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;; /*need image that gives sense of protection/calm*/
+  
 }
   
   /*Product Name*/
@@ -18,6 +19,51 @@ body {
     0 0 20px #A5F1FF, 0 0 30px #A5F1FF,
     0 0 40px #A5F1FF;
   }
+
+  /*TABS*/
+  /* Style the tab */
+  .tab {
+  overflow: hidden;
+  border: 1px solid #66CCCC;
+  background-color: #AFEEEE;
+  }
+  /* Style the buttons inside the tab */
+  .tab button {
+    background-color: inherit;
+    float: left;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 14px 16px;
+    transition: 0.3s;
+    font-size: 17px;
+  }
+  /* Change background color of buttons on hover */
+  .tab button:hover {
+    background-color: #70DBDB;
+  }
+  /* Create an active/current tablink class */
+  .tab button.active {
+    background-color: #66CCCC;
+  }
+  /* Style the tab content */
+  .tabcontent {
+    display: none;
+    padding: 6px 12px;
+    border: 1px solid #66CCCC;
+    border-top: none;
+  }
+
+  /*settings buttons*/
+  #sens_button{
+    cursor:pointer;
+  }
+  #record_button{
+    cursor:pointer;
+  }
+  #cam_button{
+    cursor:pointer;
+  }
   
   /*Start button*/
   .start_button{
@@ -28,6 +74,17 @@ body {
   /*Stop button*/
   .stop_button{
     text-align: center;
+    cursor:pointer;
+  }
+  
+  /*directory buttons*/
+  .unknown_dir {
+    cursor:pointer;
+  }
+  .trust_dir {
+    cursor:pointer;
+  }
+  .motion_dir {
     cursor:pointer;
   }
 
