Adding latest image algo

--- a/templates/protecc.html
+++ b/templates/protecc.html
@@ -211,7 +211,7 @@
         <th style="width:33%">Motion Detection Images</th>
       </tr>
       <tr>
-        <td>IMAGES HERE</td>
+        <td><img id="picture" src="data:image/png;base64,{{ img_data }}"></td>
         <td>IMAGES HERE</td> 
         <td>IMAGES HERE</td>
       </tr>
