--- a/protecc_frontend/protecc.css
+++ b/protecc_frontend/protecc.css
@@ -14,6 +14,7 @@ body {
     font-family: Helvetica;
     /*shadow effects*/
     color: #2757da;
+    font-size: 35px;
     text-shadow: 
     0 0 5px #A5F1FF, 0 0 10px #A5F1FF,
     0 0 20px #A5F1FF, 0 0 30px #A5F1FF,
@@ -80,22 +81,22 @@ body {
   }
 
   .start_button{
-    background-color: #008CBA;
-    font-size: 30px;
+    background-color: #228B22;
+    font-size: 40px;
     border-radius: 12px;
     cursor:pointer;
   }
   
   .stop_button{
-    background-color: #008CBA;
-    font-size: 30px;
+    background-color: #dc143c;
+    font-size: 40px;
     border-radius: 12px;
     cursor:pointer;
   }
   
   
   /*directory buttons*/
-  #dir{
+  #dirs{
     width:100%;
     text-align: center;
   }
@@ -103,29 +104,55 @@ body {
     width:300px;
     display: inline-block;
   }
-  .unknown_dir {
-    background-color: #008CBA;
-    font-size: 20px;
+  .dir {
+    background-color: #4CAF50;
+    border: none;
+    color: white;
+    padding: 16px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
     border-radius: 12px;
-    cursor:pointer;
+    font-size: 16px;
+    margin: 4px 2px;
+    transition-duration: 0.4s;
+    cursor: pointer;
   }
-  .trust_dir {
-    background-color: #008CBA;
-    font-size: 20px;
-    border-radius: 12px;
-    cursor:pointer;
+  .unknown {
+    background-color: white; 
+    color: black; 
+    border: 2px solid #f44336;
   }
-  .motion_dir {
-    background-color: #008CBA;
-    font-size: 20px;
-    border-radius: 12px;
-    cursor:pointer;
+  .unknown:hover {
+    background-color: #f44336;
+    color: white;
   }
-  .record_dir{
+  .trust {
+    background-color: white; 
+    color: black; 
+    border: 2px solid #4CAF50;
+  }
+  .trust:hover {
+    background-color: #4CAF50;
+    color: white;
+  }
+  .motion {
+    background-color: white; 
+    color: black; 
+    border: 2px solid #008CBA;
+  }
+  .motion:hover {
     background-color: #008CBA;
-    font-size: 20px;
-    border-radius: 12px;
-    cursor:pointer;
+    color: white;
+  }
+  .record {
+    background-color: white;
+    color: black;
+    border: 2px solid #555555;
+  }  
+  .record:hover {
+    background-color: #555555;
+    color: white;
   }
 
  
