--- a/protecc_frontend/motiondir.css
+++ b/protecc_frontend/motiondir.css
@@ -5,3 +5,38 @@ body {
     -o-background-size: cover;
     background-size: cover;; /*need image that gives sense of protection/calm*/
 }
+.return {
+    background-color: #4CAF50;
+    border: none;
+    color: white;
+    padding: 16px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    border-radius: 12px;
+    font-size: 16px;
+    margin: 4px 2px;
+    transition-duration: 0.4s;
+    cursor: pointer;
+  }
+  .home {
+    background-color: white; 
+    color: black; 
+    border: 2px solid #008CBA;
+  }
+  .home:hover {
+    background-color: #008CBA;
+    color: white;
+  }
+
+  h1 {
+    text-align:center;
+    font-family: Helvetica;
+    /*shadow effects*/
+    color: #2757da;
+    font-size: 35px;
+    text-shadow: 
+    0 0 5px #A5F1FF, 0 0 10px #A5F1FF,
+    0 0 20px #A5F1FF, 0 0 30px #A5F1FF,
+    0 0 40px #A5F1FF;
+  }
