--- a/protecc_frontend/unknowndir.css
+++ b/protecc_frontend/unknowndir.css
@@ -6,3 +6,39 @@ body {
     background-size: cover;; /*need image that gives sense of protection/calm*/
 
 }
+
+.return {
+    background-color: #4CAF50;
+    border: none;
+    color: white;
+    padding: 16px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    border-radius: 12px;
+    font-size: 16px;
+    margin: 4px 2px;
+    transition-duration: 0.4s;
+    cursor: pointer;
+  }
+  .home {
+    background-color: white; 
+    color: black; 
+    border: 2px solid #f44336;
+  }
+  .home:hover {
+    background-color: #f44336;
+    color: white;
+  }
+
+  h1 {
+    text-align:center;
+    font-family: Helvetica;
+    /*shadow effects*/
+    color: #2757da;
+    font-size: 35px;
+    text-shadow: 
+    0 0 5px #A5F1FF, 0 0 10px #A5F1FF,
+    0 0 20px #A5F1FF, 0 0 30px #A5F1FF,
+    0 0 40px #A5F1FF;
+  }
